# Field_Mapper

./: .gitignore  CLAUDE.md  PRD.md  README.md  implementation.md  main.py  new_plan.md  pyproject.toml  update strategy.md
fieldmapper/: __init__.py  cli.py  config.py  io_utils.py  pipeline.py
fieldmapper/clustering/: concept_cluster.py
fieldmapper/embedding/: embedder.py  vector_store.py
fieldmapper/extraction/: ollama_client.py  paper_extractor.py  prompts.py
fieldmapper/ingestion/: pdf_loader.py  section_parser.py
fieldmapper/reporting/: citations.py  knowledge_base.py  openalex.py  report_generator.py  review_writer.py
fieldmapper/synthesis/: field_synthesizer.py  theory_extractor.py
fieldmapper/visualization/: concept_map.py
